# vgn

./: CMakeLists.txt  README.md  get_msg.py  package.xml  setup.py  test.ipynb  test.py
launch/: vgn_server.launch
msg/: GraspCandidate.msg
nodes/: vgn_server.py
scripts/: vgn_server.py
src/inference/: _data.py  _dataset.py  _envs.py  _simulation.py  detection.py  grasp.py  networks.py  perception.py  readme  rviz.py  utils.py  visualizer.py
src/robot_helpers/: _bullet.py  _timer.py  io.py  model.py  perception.py  spatial.py  utils.py
src/robot_helpers/ros/: conversions.py  moveit.py  panda.py  rviz.py  tf.py
srv/: Integrate.srv  PredictGrasps.srv
