<?xml version="1.0"?>
<package format="2">
  <name>vgn</name>
  <version>0.0.0</version>
  <description>The vgn package</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>TODO</license>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>
  <buildtool_depend>catkin</buildtool_depend>
</package>
